codepkg/objects/Retailer_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retailer Codes</relationshipLabel>
        <relationshipName>Retailer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attach_PDF_in_MagNET_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked this box, will attach PDF in email alert</inlineHelpText>
        <label>Attach PDF in MagNET Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cogs_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cogs Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cogs_Remark__c</fullName>
        <inlineHelpText>e.g. Request by which company</inlineHelpText>
        <label>Cogs Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Retailer Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Date_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Date Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Image_In_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate whether product image has to be displayed in the generated quote / Final PO pdf.</description>
        <label>Display Image In Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MagNET Order mandatory at UI</inlineHelpText>
        <label>Division Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Division check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Download_Folder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_End_User__c</fullName>
        <label>ERP End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Unique_ID__c</fullName>
        <label>External Unique ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Box_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to validate full box qty to be order in each order details in Portal</description>
        <label>Full Box Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Shipment_ID__c</fullName>
        <label>Internal Shipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_LOB__c</fullName>
        <description>JDE LOB</description>
        <inlineHelpText>JDE LOB</inlineHelpText>
        <label>JDE LOB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Label Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Label</fullName>
                </value>
                <value>
                    <fullName>National Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lang_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lang-1</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Retailer Codes</relationshipLabel>
        <relationshipName>Retailer_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lang_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lang-2</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Retailer Codes (Lang-2)</relationshipLabel>
        <relationshipName>Retailer_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lang_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lang-3</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Retailer Codes (Lang-3)</relationshipLabel>
        <relationshipName>Retailer_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSriLanka_LOB__c</fullName>
        <label>MSriLanka LOB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagNET_Catalog_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MagNET Catalog Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufactor_Code_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manufactor Code Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Code_UnMask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>access for edit Manufacture Code in Customer Sales Order</description>
        <inlineHelpText>UnMask  Manufacturer Code in Confirm Sales Order</inlineHelpText>
        <label>Manufacturer Code UnMask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nomination__c</fullName>
        <label>Nomination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Preferred Supplier</fullName>
                </value>
                <value>
                    <fullName>Sole nominate</fullName>
                </value>
                <value>
                    <fullName>Not nominate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Enquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow selection for Contact Retailer Relationship to omit wrong selection</description>
        <label>Online Enquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Date Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_book_Print_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price book Print Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Salesreport Check</description>
        <inlineHelpText>Need to check production country during sales upload!</inlineHelpText>
        <label>Production Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFID_Prefix__c</fullName>
        <label>RFID Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remarks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer_Brand_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retailer Brand Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer_Brand__c</fullName>
        <label>Retailer Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code1__c</fullName>
        <label>Retailer Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Including in Sales Upload Retailer Checking List! 
Retailer Statue should be Active too</inlineHelpText>
        <label>Retailer Code Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer_Code_Id_18_Digit__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
   IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
   +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
   +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
   +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
   +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
   )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Code Id (18-Digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Code Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Division__c</fullName>
        <label>Retailer Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_PO_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MagNET Order mandatory at UI</inlineHelpText>
        <label>Retailer PO Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_LOB__c</fullName>
        <label>SAP LOB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Data_Market__c</fullName>
        <formula>if(  CONTAINS(text(Market_Segment__c) , &quot;USA&quot;),&quot;US&quot;,
if(  CONTAINS(text(Market_Segment__c) , &quot;EU&quot;),&quot;EU&quot;,
if(  CONTAINS(text(Market_Segment__c) , &quot;REST OF THE WORLD&quot;),&quot;REST&quot;,
if(  CONTAINS(text(Market_Segment__c) , &quot;LOCAL&quot;),&quot;LOCAL&quot;,
if(  CONTAINS(text(Market_Segment__c) , &quot;UK&quot;),&quot;UK&quot;,
&quot;REST&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Data Market (not use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Data_Upload_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check Price book model in related price book product during sales upload</inlineHelpText>
        <label>Price book Model Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Data_Upload_Color__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For checking sales data upload, check price book product color</description>
        <inlineHelpText>Check PriceBook Product Color, 
Price book Model Check must check when want to check color</inlineHelpText>
        <label>Price book Color Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Data_Upload_Market__c</fullName>
        <inlineHelpText>SalesDataUploadMapping</inlineHelpText>
        <label>Sales Data Upload Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>LOCAL</fullName>
                </value>
                <value>
                    <fullName>REST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MagNET Order mandatory at UI</inlineHelpText>
        <label>Season Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Season_Year_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For MagNET Order mandatory at UI</inlineHelpText>
        <label>Season Year Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Price_in_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>show price in Online Order if required.</description>
        <inlineHelpText>Show price in Online Order if required.</inlineHelpText>
        <label>Show Price in Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Price_in_SO_Confirmation_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Price in SO Confirmation (PDF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Special_Terms_and_Conditions_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for MagNET PDF Order</description>
        <label>Show Special Terms and Conditions (PDF)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Terms_and_Conditions__c</fullName>
        <description>Special Terms and Conditions (PDF) Value</description>
        <label>Special Terms and Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Code_Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier Code Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Code_UnMask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>access for  Edit Supplier Code in Customer Sales Order</description>
        <inlineHelpText>UnMask  Supplier Code in Confirm Sales Order</inlineHelpText>
        <label>Supplier Code UnMask</label>
        <type>Checkbox</type>
    </fields>
    <label>Retailer Code</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>MACY</value>
        </filters>
        <label>_ALL</label>
    </listViews>
    <listViews>
        <fullName>All_BRAZIL</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>All BRAZIL</label>
    </listViews>
    <listViews>
        <fullName>All_Canada_Retailer_Codes</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>CANADA</value>
        </filters>
        <label>All Canada Retailer Codes</label>
    </listViews>
    <listViews>
        <fullName>All_EU_Retailer_Codes</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>EU</value>
        </filters>
        <label>All EU Retailer Codes</label>
    </listViews>
    <listViews>
        <fullName>All_OTHERS</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>OTHER</value>
        </filters>
        <label>All OTHERS</label>
    </listViews>
    <listViews>
        <fullName>All_Retailer_Codes</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Online_Enquiry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Retailer Codes</label>
    </listViews>
    <listViews>
        <fullName>All_USA_Retailer_Codes</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Nomination__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Segment__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <label>All USA Retailer Codes</label>
    </listViews>
    <listViews>
        <fullName>Customer_Portal_Retailer_Codes</fullName>
        <columns>NAME</columns>
        <columns>Retailer_Division__c</columns>
        <columns>Retailer_Brand__c</columns>
        <columns>Label__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Country__c</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>JDE_LOB__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>___Customer Portal Retailer Codes</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MagNET_Catalog</fullName>
        <columns>NAME</columns>
        <columns>JDE_LOB__c</columns>
        <columns>SAP_LOB__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>MagNET_Catalog_Order__c</columns>
        <columns>Show_Price_in_Order__c</columns>
        <columns>Full_Box_Order__c</columns>
        <columns>Display_Image_In_Document__c</columns>
        <columns>Remarks__c</columns>
        <columns>Supplier_Code_Mandatory__c</columns>
        <columns>Manufactor_Code_Mandatory__c</columns>
        <columns>Attach_PDF_in_MagNET_Email__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MagNET_Catalog_Order__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_MagNET Catalog</label>
        <language>en_US</language>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MagNET_Catalog_Order</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>JDE_LOB__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>Manufactor_Code_Mandatory__c</columns>
        <columns>Supplier_Code_Mandatory__c</columns>
        <columns>MagNET_Catalog_Order__c</columns>
        <columns>Full_Box_Order__c</columns>
        <columns>Show_Price_in_Order__c</columns>
        <columns>Show_Price_in_SO_Confirmation_PDF__c</columns>
        <columns>Display_Image_In_Document__c</columns>
        <columns>Show_Special_Terms_and_Conditions_PDF__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MagNET_Catalog_Order__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>__MagNET Catalog Order</label>
    </listViews>
    <listViews>
        <fullName>MagNET_SAP</fullName>
        <columns>NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>SAP_LOB__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>Manufactor_Code_Mandatory__c</columns>
        <columns>Supplier_Code_Mandatory__c</columns>
        <columns>MagNET_Catalog_Order__c</columns>
        <columns>Full_Box_Order__c</columns>
        <columns>Show_Price_in_Order__c</columns>
        <columns>Show_Price_in_SO_Confirmation_PDF__c</columns>
        <columns>Display_Image_In_Document__c</columns>
        <columns>Show_Special_Terms_and_Conditions_PDF__c</columns>
        <columns>Attach_PDF_in_MagNET_Email__c</columns>
        <columns>Remarks__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MagNET_Catalog_Order__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>SAP_LOB__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>__MagNET SAP</label>
    </listViews>
    <listViews>
        <fullName>OnlineEnquiry</fullName>
        <columns>NAME</columns>
        <columns>JDE_LOB__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>MagNET_Catalog_Order__c</columns>
        <columns>Manufactor_Code_Mandatory__c</columns>
        <columns>Supplier_Code_Mandatory__c</columns>
        <columns>Full_Box_Order__c</columns>
        <columns>Display_Image_In_Document__c</columns>
        <columns>Show_Price_in_Order__c</columns>
        <columns>Show_Price_in_SO_Confirmation_PDF__c</columns>
        <columns>Show_Special_Terms_and_Conditions_PDF__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Download_Folder__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_OnlineEnquiry</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry</fullName>
        <columns>NAME</columns>
        <columns>JDE_LOB__c</columns>
        <columns>Retailer_Code_Id__c</columns>
        <columns>Display_Image_In_Document__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>Full_Box_Order__c</columns>
        <columns>Show_Price_in_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_Online Enquiry</label>
    </listViews>
    <listViews>
        <fullName>Retailer_SalesData</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 6) and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>MagNET_Catalog_Order__c</columns>
        <columns>Online_Enquiry__c</columns>
        <columns>Sales_Data_Upload_Check__c</columns>
        <columns>Sales_Data_Upload_Color__c</columns>
        <columns>Division_check__c</columns>
        <columns>Label_Check__c</columns>
        <columns>Retailer_Brand_Check__c</columns>
        <columns>Production_Country__c</columns>
        <columns>Market_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Data_Upload_Color__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Label_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Division_check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Retailer_Brand_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Sales_Data_Upload_Check__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Retailer_SalesData</label>
        <sharedTo>
            <role>Administrator_Role</role>
            <role>Sales_Hong_Kong</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Retailer Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retailer Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>